# mqengine

./: PyPI-Recovery-Codes-CrayNg05-2026-04-16T20_23_27.926753.txt  README.md  pyproject.toml
examples/: nvt_sql_pattern_example.py  nvt_sweep_dashboard_example.py
mqengine/: __init__.py  alignment.py  conditions.py  dashboard.py  engine.py  facade.py  io_sql.py  metrics.py  montecarlo.py  oms_analytics.py  portfolio.py  research.py  result.py  risk.py  schemas.py  stability.py  sweep.py  transforms.py  types.py  validation.py  vectorized.py
mqengine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mqengine/templates/: basic.html
tests/: test_adrs_compat_metrics.py  test_alignment.py  test_engine_backward_compat.py  test_metric_keys.py  test_metrics.py  test_portfolio.py  test_research_protocol_splits.py  test_research_split.py  test_validation_signal.py  test_vectorized_signal_backtest.py  test_walkforward.py
