[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mqengine"
version = "0.3.0"
description = "MQENGINE backtest runtime + sweep dashboard inspired by NVT workflow"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "flask>=3.0.0",
  "numpy>=1.24.0",
  "pandas>=2.0.0",
]
